------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.4 branch)

------------------------------------------------------------------------------

See UPGRADE document for incompatible changes not listed here.

Interchange 5.5.2 (unreleased).

Core
----

* Fixed the MinQuantityField and MaxQuantityField enforcement code so that
  it takes the entire cart into account when SeparateItems is in use.

* New SocketReadTimeout global configuration parameter that controls
  the amount of time (in seconds) that Interchange will wait for incoming
  request data to arrive on an open socket.  This was previously hard-coded
  to one second, but that value was found to be too slow for some dial-up
  Internet users.

* Fix to the "random" parameter used by looping tags.

	-- If set to "no" or "false" or "0" then return all of the results
	   their original order (previously returned one random result).

	-- If set to "yes" or "true" then then return all results in a
	   random order (again, previously returned one random result).
	   
	-- If set to a numeric > 0 then return that many random results.

	-- If set to a numeric > the available results then return all
	   results in a random order (previously returned the original
	   results in the original order).
	
  If you're using "random=yes" to request one random result then you
  will need to change your code to use random=1 instead.

* Altered the DomainTail directive to take subdomains of various ccTLDs
  into account.  For example, if "foo.example.co.uk" pays a visit then
  "example.co.uk" as the domain tail will be used instead of just "co.uk".

  This is done with a new CountrySubdomains directive.  A predefined block
  of country subdomains is listed in a new subdomains.cfg file, which
  should be "included" into the interchange.cfg file.
